// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test workarea should render correctly 1`] = `
<div>
  <dummy-context-menu-trigger
    disable="false"
    holdtodisplay="-1"
    holdtodisplaymouse="-1"
    id="canvas-contextmenu"
  >
    <div
      class="mac"
      id="workarea"
    >
      <div
        id="svgcanvas"
        style="position: relative;"
      />
    </div>
  </dummy-context-menu-trigger>
  <dummy-context-menu
    id="canvas-contextmenu"
  >
    <dummy-menu-item
      disabled="true"
    >
      Cut
    </dummy-menu-item>
    <dummy-menu-item
      disabled="true"
    >
      Copy
    </dummy-menu-item>
    <dummy-menu-item
      disabled="true"
    >
      Paste
    </dummy-menu-item>
    <dummy-menu-item
      disabled="true"
    >
      Paste in Place
    </dummy-menu-item>
    <dummy-menu-item
      disabled="true"
    >
      Duplicate
    </dummy-menu-item>
    <div
      class="separator"
    />
    <dummy-menu-item
      disabled="true"
    >
      Delete
    </dummy-menu-item>
    <div
      class="separator"
    />
    <dummy-menu-item
      disabled="true"
    >
      Group
    </dummy-menu-item>
    <dummy-menu-item
      disabled="true"
    >
      Ungroup
    </dummy-menu-item>
    <div
      class="separator"
    />
    <dummy-menu-item
      disabled="true"
    >
      Bring to Front
    </dummy-menu-item>
    <dummy-menu-item
      disabled="true"
    >
      Bring Forward
    </dummy-menu-item>
    <dummy-menu-item
      disabled="true"
    >
      Send Backward
    </dummy-menu-item>
    <dummy-menu-item
      disabled="true"
    >
      Send to Back
    </dummy-menu-item>
    <div
      class="separator"
    />
    <dummy-sub-menu
      disabled="true"
      title="Move elements to:"
    >
      <dummy-menu-item
        disabled="true"
      >
        Layer 1
      </dummy-menu-item>
      <dummy-menu-item
        disabled="false"
      >
        Layer 2
      </dummy-menu-item>
    </dummy-sub-menu>
  </dummy-context-menu>
</div>
`;

exports[`test workarea should render correctly 2`] = `
<div>
  <dummy-context-menu-trigger
    disable="true"
    holdtodisplay="-1"
    holdtodisplaymouse="-1"
    id="canvas-contextmenu"
  >
    <div
      class="mac"
      id="workarea"
    >
      <div
        id="svgcanvas"
        style="position: relative;"
      />
    </div>
  </dummy-context-menu-trigger>
  <dummy-context-menu
    id="canvas-contextmenu"
  >
    <dummy-menu-item
      disabled="false"
    >
      Cut
    </dummy-menu-item>
    <dummy-menu-item
      disabled="false"
    >
      Copy
    </dummy-menu-item>
    <dummy-menu-item
      disabled="false"
    >
      Paste
    </dummy-menu-item>
    <dummy-menu-item
      disabled="false"
    >
      Paste in Place
    </dummy-menu-item>
    <dummy-menu-item
      disabled="false"
    >
      Duplicate
    </dummy-menu-item>
    <div
      class="separator"
    />
    <dummy-menu-item
      disabled="false"
    >
      Delete
    </dummy-menu-item>
    <div
      class="separator"
    />
    <dummy-menu-item
      disabled="true"
    >
      Group
    </dummy-menu-item>
    <dummy-menu-item
      disabled="true"
    >
      Ungroup
    </dummy-menu-item>
    <div
      class="separator"
    />
    <dummy-menu-item
      disabled="false"
    >
      Bring to Front
    </dummy-menu-item>
    <dummy-menu-item
      disabled="false"
    >
      Bring Forward
    </dummy-menu-item>
    <dummy-menu-item
      disabled="false"
    >
      Send Backward
    </dummy-menu-item>
    <dummy-menu-item
      disabled="false"
    >
      Send to Back
    </dummy-menu-item>
    <div
      class="separator"
    />
    <dummy-sub-menu
      disabled="false"
      title="Move elements to:"
    >
      <dummy-menu-item
        disabled="true"
      >
        Layer 1
      </dummy-menu-item>
      <dummy-menu-item
        disabled="false"
      >
        Layer 2
      </dummy-menu-item>
    </dummy-sub-menu>
  </dummy-context-menu>
</div>
`;
